--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -170,6 +170,10 @@ body {
   @apply heading-1 mt-[36px];
 }
 
+.single-blog .wp-block-heading strong {
+  @apply capitalize;
+}
+
 .single-blog p {
   @apply mt-[16px] text-[24px];
 }
@@ -325,4 +329,9 @@ body {
   border-radius: 100px;
   overflow: hidden;
   padding: 0 !important;
+}
+
+.rc-checkbox-checked .rc-checkbox-inner {
+  background-color: #264ae6 !important;
+  border-color: #264ae6 !important;
 }
